# claw8s

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  __init__.py  agent.py  audit.py  bad-app.yaml  config.py  config.yaml.example  kubeclaw_audit.db-shm  kubeclaw_audit.db-wal  llm.py  main.py  pyproject.toml  requirements.txt  watcher.py
bot/: __init__.py  telegram.py
bot/docs/: ARCHITECTURE.md  BLOG.md  WHITEPAPER.md
dashboard/: api.py  run.py
dashboard/static/: app.js  index.html  style.css
docs/: BLOG.md  CONFIGURATION.md  SKILLS.md
prompts/: __init__.py  guidelines.md  soul.md
scratch/: analyze_history.py  check_audit.py  check_db.py  check_failed_actions.py
scripts/: bad-app.yaml  good-app.yaml
skills/: __init__.py  _runner.py  crashloop_backoff.yaml  image_pull_failure.yaml  oom_killed.yaml  resource_pressure.yaml  unhealthy_pod.yaml
tools/: __init__.py  communication.py  kubectl.py  registry.py
